@@ -7,7 +7,6 @@ import org.homio.addon.firmata.model.FirmataBaseEntity;
 import org.homio.addon.firmata.provider.util.OneWireDevice;
 import org.homio.api.Context;
 import org.homio.api.model.OptionModel;
-import org.homio.api.model.Status;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -21,8 +20,8 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import static org.homio.addon.firmata.workspace.Scratch3FirmataBaseBlock.FIRMATA_ID_MENU;
 import static org.homio.addon.firmata.workspace.Scratch3FirmataBaseBlock.PIN;
-import static org.homio.addon.firmata.workspace.Scratch3FirmataBlocks.FIRMATA_ID_MENU;
 
 @Log4j2
 @RestController
@@ -44,15 +43,15 @@ public class FirmataController {
       } catch (Exception ex) {
         return Collections.emptyList();
       }
-      FirmataBaseEntity entity = context.db().get(firmataIdMenu);
-      if (entity != null && entity.getJoined() == Status.ONLINE) {
-        entity.getDevice().getIoOneWire().sendOneWireConfig(pinNum, true);
+      FirmataBaseEntity<?> entity = context.db().get(firmataIdMenu);
+      if (entity != null && entity.getStatus().isOnline()) {
+        entity.getService().sendOneWireConfig(pinNum, true);
 
-        List<OneWireDevice> devices = entity.getDevice().getIoOneWire().sendOneWireSearch(pinNum);
+        List<OneWireDevice> devices = entity.getService().sendOneWireSearch(pinNum);
         if (devices != null) {
           List<OneWireDevice> ds18B20Devices = devices;
           if (family != null) {
-            ds18B20Devices = devices.stream().filter(d -> d.isFamily(0x28)).collect(Collectors.toList());
+            ds18B20Devices = devices.stream().filter(d -> d.isFamily(0x28)).toList();
           }
           return ds18B20Devices.stream().map(d -> OptionModel.of(String.valueOf(d.getAddress()), d.toString())).collect(Collectors.toList());
         }
@@ -69,11 +68,11 @@ public class FirmataController {
   @GetMapping("pin/{mode}")
   public Collection<OptionModel> getPins(@PathVariable("mode") String mode, @RequestParam(name = FIRMATA_ID_MENU, required = false) String firmataIdMenu) {
     if (firmataIdMenu != null) {
-      FirmataBaseEntity entity = context.db().get(firmataIdMenu);
-      if (entity != null && entity.getJoined() == Status.ONLINE) {
+      FirmataBaseEntity<?> entity = context.db().get(firmataIdMenu);
+      if (entity != null && entity.getStatus().isOnline()) {
         Pin.Mode supportMode = mode == null ? null : Pin.Mode.valueOf(mode);
         List<OptionModel> pins = new ArrayList<>();
-        ArrayList<Pin> sortedPins = new ArrayList<>(entity.getDevice().getIoDevice().getPins());
+        ArrayList<Pin> sortedPins = new ArrayList<>(entity.getService().getPins());
         sortedPins.sort(Comparator.comparingInt(Pin::getIndex));
         for (Pin pin : sortedPins) {
           if (!pin.getSupportedModes().isEmpty() && (supportMode == null || pin.getSupportedModes().contains(supportMode))) {
